# Magicpitch-Assessment

./: Dockerfile  README.md  api_request.py  main.py  pyproject.toml  tasks.py  test_main.py
