[tool.poetry]
name = "magicpitch-assessment"
version = "0.1.0"
description = "Interview assessment task"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "magicpitch_assessment"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.31.0"
celery = "^5.3.6"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
